// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Features Merge Conflict Resolution it should properly fix merge conflicts 1`] = `
"# This file is generated by running "yarn install" inside your project.
# Manual changes might be lost - proceed with caution!

__metadata:
  version: X
  cacheKey: 0c0

"no-deps@npm:*":
<<<<<<< HEAD
  version: 1.0.0
  resolution: "no-deps@npm:1.0.0"
  checksum: <checksum stripped>
=======
  version: 2.0.0
  resolution: "no-deps@npm:2.0.0"
  checksum: <checksum stripped>
>>>>>>> 2.0.0
  languageName: node
  linkType: hard

"root-workspace-0b6124@workspace:.":
  version: 0.0.0-use.local
  resolution: "root-workspace-0b6124@workspace:."
  dependencies:
    no-deps: "npm:*"
  languageName: unknown
  linkType: soft
"
`;

exports[`Features Merge Conflict Resolution it should properly fix merge conflicts 2`] = `
{
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0048: Automatically fixed merge conflicts 👍

➤ YN0000: · Yarn 0.0.0
➤ YN0000: ┌ Resolution step
➤ YN0000: └ Completed
➤ YN0000: ┌ Fetch step
➤ YN0013: │ No new packages added to the project, but one was removed (- 0.78 KiB).
➤ YN0000: └ Completed
➤ YN0000: ┌ Link step
➤ YN0000: └ Completed
➤ YN0000: · Done
",
}
`;

exports[`Features Merge Conflict Resolution it should properly fix merge conflicts when old is Yarn 1 and new is Yarn 2 1`] = `
"# This file is generated by running "yarn install" inside your project.
# Manual changes might be lost - proceed with caution!

__metadata:
  version: X
  cacheKey: 0c0

<<<<<<< HEAD
no-deps@*:
  version "2.0.0"
  resolved "http://localhost:64572/no-deps/-/no-deps-2.0.0.tgz#f3b8f24d76b21b04748e6888672752b872236fa7"
  integrity sha1-87jyTXayGwR0jmiIZydSuHIjb6c=
=======
"no-deps@npm:*":
  version: 2.0.0
  resolution: "no-deps@npm:2.0.0"
  checksum: <checksum stripped>
  languageName: node
  linkType: hard

"root-workspace-0b6124@workspace:.":
  version: 0.0.0-use.local
  resolution: "root-workspace-0b6124@workspace:."
  dependencies:
    no-deps: "npm:*"
  languageName: unknown
  linkType: soft
>>>>>>> yarn2
"
`;

exports[`Features Merge Conflict Resolution it should properly fix merge conflicts when old is Yarn 1 and new is Yarn 2 2`] = `
{
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0048: Automatically fixed merge conflicts 👍

➤ YN0000: · Yarn 0.0.0
➤ YN0000: ┌ Resolution step
➤ YN0000: └ Completed
➤ YN0000: ┌ Fetch step
➤ YN0000: └ Completed
➤ YN0000: ┌ Link step
➤ YN0000: └ Completed
➤ YN0000: · Done
",
}
`;

exports[`Features Merge Conflict Resolution it should support fixing cherry-pick conflicts 1`] = `
"# This file is generated by running "yarn install" inside your project.
# Manual changes might be lost - proceed with caution!

__metadata:
  version: X
  cacheKey: 0c0

"no-deps@npm:*":
<<<<<<< HEAD
  version: 1.0.0
  resolution: "no-deps@npm:1.0.0"
  checksum: <checksum stripped>
=======
  version: 2.0.0
  resolution: "no-deps@npm:2.0.0"
  checksum: <checksum stripped>
>>>>>>> 0000000 (commit-2.0.0)
  languageName: node
  linkType: hard

"root-workspace-0b6124@workspace:.":
  version: 0.0.0-use.local
  resolution: "root-workspace-0b6124@workspace:."
  dependencies:
    no-deps: "npm:*"
  languageName: unknown
  linkType: soft
"
`;

exports[`Features Merge Conflict Resolution it should support fixing cherry-pick conflicts 2`] = `
{
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0048: Automatically fixed merge conflicts 👍

➤ YN0000: · Yarn 0.0.0
➤ YN0000: ┌ Resolution step
➤ YN0000: └ Completed
➤ YN0000: ┌ Fetch step
➤ YN0013: │ No new packages added to the project, but one was removed (- 0.78 KiB).
➤ YN0000: └ Completed
➤ YN0000: ┌ Link step
➤ YN0000: └ Completed
➤ YN0000: · Done
",
}
`;

exports[`Features Merge Conflict Resolution it should support fixing rebase conflicts 1`] = `
"# This file is generated by running "yarn install" inside your project.
# Manual changes might be lost - proceed with caution!

__metadata:
  version: X
  cacheKey: 0c0

"no-deps@npm:*":
<<<<<<< HEAD
  version: 2.0.0
  resolution: "no-deps@npm:2.0.0"
  checksum: <checksum stripped>
=======
  version: 1.0.0
  resolution: "no-deps@npm:1.0.0"
  checksum: <checksum stripped>
>>>>>>> 0000000 (commit-1.0.0)
  languageName: node
  linkType: hard

"root-workspace-0b6124@workspace:.":
  version: 0.0.0-use.local
  resolution: "root-workspace-0b6124@workspace:."
  dependencies:
    no-deps: "npm:*"
  languageName: unknown
  linkType: soft
"
`;

exports[`Features Merge Conflict Resolution it should support fixing rebase conflicts 2`] = `
{
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0048: Automatically fixed merge conflicts 👍

➤ YN0000: · Yarn 0.0.0
➤ YN0000: ┌ Resolution step
➤ YN0000: └ Completed
➤ YN0000: ┌ Fetch step
➤ YN0013: │ No new packages added to the project, but one was removed (- 0.78 KiB).
➤ YN0000: └ Completed
➤ YN0000: ┌ Link step
➤ YN0000: └ Completed
➤ YN0000: · Done
",
}
`;

exports[`Features Merge Conflict Resolution it shouldn't re-fetch the lockfile metadata when performing simple merge conflict resolutions 1`] = `
"# This file is generated by running "yarn install" inside your project.
# Manual changes might be lost - proceed with caution!

__metadata:
  version: X
  cacheKey: 0c0

"no-deps@npm:*":
<<<<<<< HEAD
  version: 1.0.0
  resolution: "no-deps@npm:1.0.0"
  checksum: <checksum stripped>
=======
  version: 2.0.0
  resolution: "no-deps@npm:2.0.0"
  checksum: <checksum stripped>
>>>>>>> 2.0.0
  languageName: node
  linkType: hard

"root-workspace-0b6124@workspace:.":
  version: 0.0.0-use.local
  resolution: "root-workspace-0b6124@workspace:."
  dependencies:
    no-deps: "npm:*"
  languageName: unknown
  linkType: soft
"
`;

exports[`Features Merge Conflict Resolution it shouldn't re-fetch the lockfile metadata when performing simple merge conflict resolutions 2`] = `
{
  "code": 0,
  "stderr": "",
  "stdout": "➤ YN0048: Automatically fixed merge conflicts 👍

➤ YN0000: · Yarn 0.0.0
➤ YN0000: ┌ Resolution step
➤ YN0000: └ Completed
➤ YN0000: ┌ Fetch step
➤ YN0013: │ No new packages added to the project, but one was removed (- 0.78 KiB).
➤ YN0000: └ Completed
➤ YN0000: ┌ Link step
➤ YN0000: └ Completed
➤ YN0000: · Done
",
}
`;
